test/scc/expr/semantic-errors/150.a
150.t:11:26: error: too many initializer values